# dendroptimized

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
include/: connected_components.hpp  types.hpp  voxel.hpp
src/: dendroptimized_ext.cpp
src/dendroptimized/: __init__.py
tests/: test_connected.py  test_voxel.py
wrapper/: dendroptimized_cpy.cpp
