[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >= 1.9.2"]
build-backend = "scikit_build_core.build"

[project]
name = "dendroptimized"
version = "0.0.1"
readme = "README.md"
description = "Optimized C++ algorithms for dendromatics"
requires-python = ">=3.9,<3.13"
license = {file = "LICENSE"}
authors = [
    { name = "Carlos Cabo", email = "carloscabo@uniovi.es" },
    { name = "Diego Laino", email = "diegolainor@gmail.com" },
]
keywords = ["dendromatics", "point clouds", "3D", "LiDAR"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering"
]

[tool.tox]
legacy_tox_ini = """
[tox]

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312


[testenv]
changedir = tests
deps =
  pytest >= 7.4
  dendromatics == 0.4.1
commands = pytest -s --basetemp="{envtmpdir}" {posargs}
"""

[project.urls]
homepage = "https://github.com/3DFin/dendroptimized"
repository = "https://github.com/3DFin/dendroptimized"

[tool.cibuildwheel]
build = "cp3{9,10,11,12}-*"
archs = ["auto64"] # limit to 64bits builds

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
